kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estudio
  labels:
    app: estudio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: estudio
  template:
    metadata:
      labels:
        app: estudio
    spec:
      containers:
        - name: estudio
          image: ghcr.io/wagoid/estudio-up:v1.7.3 # {x-release-please-version}
          command: ['/usr/bin/tini']
          args: ['--', '/app/node_modules/.bin/next', 'start']
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
