kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estudio
spec:
  selector:
    app: estudio
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
