kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: estudio
  labels:
    app: estudio
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: estudio.uptec.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: estudio
                port:
                  number: 3000
